<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_details_overall"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTemperature"
                android:text="30"
                android:textSize="64sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvTemperatureDegree"
                android:text="@string/degree"
                android:textSize="64sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvStateCountry"
            android:textAlignment="center"
            android:text="@string/state_country"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvWeatherStatus"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:text="@string/weather_status"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSunrise"
                android:text="@string/sunrise"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_margin="5dp"
                android:background="@color/primary"
                android:layout_width="2dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tvSunset"
                android:text="@string/sunset"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/overall_forecast"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvSeeOverAll"
                android:textColor="@color/primary"
                android:layout_gravity="end"
                android:text="@string/see_more"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:background="@color/primary"
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/primary"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_feels_like_white"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>

                    <TextView
                        android:id="@+id/tvTempFeels"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:text="@string/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/low_temp_white"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>

                    <TextView
                        android:id="@+id/tvTempMin"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:text="@string/min_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/high_temp_white"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>

                    <TextView
                        android:id="@+id/tvTempMax"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:text="@string/max_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>